feat: update contact info and location

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     "name": "Red and Blue",
     "url": "https://redandblue.dev",
     "description": "Desarrollo web a medida, automatización de procesos e integración de IA",
-    "foundingLocation": "Argentina",
+    "foundingLocation": "Uruguay",
     "serviceType": ["Desarrollo Web", "Automatización de Procesos", "Integración con IA"],
     "contactPoint": {
       "@type": "ContactPoint",
       "contactType": "Ventas",
-      "email": "hola@redandblue.com"
+      "email": "contact@redandblue.dev"
     }
   }
   </script>
@@ -282,7 +282,7 @@
           </p>
 
           <div class="contact__channels js-reveal">
-            <a href="https://wa.me/TUNUMERO?text=Hola%20Red%20%26%20Blue%2C%20me%20interesa%20hablar%20sobre%20un%20proyecto"
+            <a href="https://wa.me/598094774410?text=Hola%20Red%20%26%20Blue%2C%20me%20interesa%20hablar%20sobre%20un%20proyecto"
                class="channel channel--wa"
                target="_blank"
                rel="noopener noreferrer"
@@ -294,14 +294,14 @@
               <span>WhatsApp</span>
             </a>
 
-            <a href="mailto:hola@redandblue.com"
+            <a href="mailto:contact@redandblue.dev"
                class="channel channel--email"
-               aria-label="Enviar correo a hola@redandblue.com"
+              aria-label="Enviar correo a contact@redandblue.dev"
                data-i18n-aria="contact.email.aria">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" aria-hidden="true">
                 <path d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/>
               </svg>
-              <span>hola@redandblue.com</span>
+              <span>contact@redandblue.dev</span>
             </a>
           </div>
         </div>
@@ -375,7 +375,7 @@
       </div>
       <div class="footer__bottom">
         <p class="footer__copy" data-i18n="footer.copy">© 2026 Red and Blue. Todos los derechos reservados.</p>
-        <p class="footer__made" data-i18n="footer.made">Hecho con precisión en Argentina.</p>
+        <p class="footer__made" data-i18n="footer.made">Hecho con precisión en Uruguay.</p>
       </div>
     </div>
   </footer>
