feat: expand services section

--- a/index.html
+++ b/index.html
@@ -163,8 +163,11 @@
         <p class="section__tag js-reveal" data-i18n="services.tag">Qué hacemos</p>
         <h2 class="section__title js-reveal" id="services-heading"
             data-i18n-html="services.heading">
-          Soluciones que<br /><em>impulsan</em> tu negocio
+          Estrategias digitales que<br /><em>impulsan resultados</em>
         </h2>
+        <p class="section__desc js-reveal services__intro" data-i18n="services.intro">
+          Cada servicio está diseñado para resolver desafíos reales de negocio con tecnología de vanguardia y las mejores prácticas de la industria.
+        </p>
       </header>
 
       <div class="services__grid">
@@ -174,40 +177,134 @@
               <rect x="2" y="3" width="20" height="14" rx="2"/><path d="M8 21h8M12 17v4"/>
             </svg>
           </div>
-          <h3 class="svc-card__title" data-i18n="services.web.title">Desarrollo Web Personalizado</h3>
+          <p class="svc-card__kicker" data-i18n="services.web.kicker">Plataformas robustas para empresas en crecimiento</p>
+          <h3 class="svc-card__title" data-i18n="services.web.title">Desarrollo Web a Medida</h3>
           <p class="svc-card__desc" data-i18n="services.web.desc">
-            Soluciones únicas adaptadas a las necesidades de tu negocio.
-            Desde landing pages hasta plataformas complejas con lógica a medida.
+            Diseñamos y construimos soluciones web únicas adaptadas a las necesidades específicas de tu empresa. Desde portales corporativos hasta plataformas complejas con lógica personalizada.
           </p>
-          <span class="svc-card__arrow" aria-hidden="true">→</span>
+          <ul class="svc-card__list">
+            <li data-i18n="services.web.b1">Aplicaciones web escalables y seguras</li>
+            <li data-i18n="services.web.b2">Arquitectura de microservicios</li>
+            <li data-i18n="services.web.b3">Integraciones con sistemas existentes (ERP, CRM)</li>
+            <li data-i18n="services.web.b4">Panel de administración personalizado</li>
+            <li data-i18n="services.web.b5">Optimización de rendimiento y SEO</li>
+          </ul>
+          <a class="btn btn--sm svc-card__cta" href="#contacto" data-i18n="services.cta">Solicitar información</a>
         </article>
 
-        <article class="svc-card svc-card--featured js-stagger" role="article">
+        <article class="svc-card svc-card--alt js-stagger" role="article">
           <div class="svc-card__icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-              <path d="M12 2L2 7l10 5 10-5-10-5z"/><path d="M2 17l10 5 10-5"/><path d="M2 12l10 5 10-5"/>
+              <path d="M3 12h6l2-4 2 8 2-4h4"/>
+              <path d="M4 5h6M14 5h6"/>
+              <path d="M4 19h6M14 19h6"/>
             </svg>
           </div>
-          <h3 class="svc-card__title" data-i18n="services.ai.title">Integración con IA</h3>
-          <p class="svc-card__desc" data-i18n="services.ai.desc">
-            Inteligencia Artificial aplicada a tus sistemas para automatizar
-            decisiones, analizar datos y maximizar la capacidad operativa.
+          <p class="svc-card__kicker" data-i18n="services.cloud.kicker">Infraestructura confiable para escalar sin friccion</p>
+          <h3 class="svc-card__title" data-i18n="services.cloud.title">Cloud y DevOps</h3>
+          <p class="svc-card__desc" data-i18n="services.cloud.desc">
+            Diseñamos, automatizamos y optimizamos entornos cloud para acelerar despliegues, mejorar la estabilidad y reducir costos operativos.
           </p>
-          <span class="svc-card__arrow" aria-hidden="true">→</span>
+          <ul class="svc-card__list">
+            <li data-i18n="services.cloud.b1">Infraestructura como codigo (IaC)</li>
+            <li data-i18n="services.cloud.b2">CI/CD y despliegues automatizados</li>
+            <li data-i18n="services.cloud.b3">Observabilidad, logs y alertas</li>
+            <li data-i18n="services.cloud.b4">Hardening y seguridad en cloud</li>
+            <li data-i18n="services.cloud.b5">Optimizacion de costos y rendimiento</li>
+          </ul>
+          <a class="btn btn--sm svc-card__cta" href="#contacto" data-i18n="services.cta">Solicitar información</a>
         </article>
 
         <article class="svc-card js-stagger" role="article">
           <div class="svc-card__icon" aria-hidden="true">
             <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-              <path d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"/>
+              <path d="M3 7h10M3 12h14M3 17h10"/>
+              <path d="M17 6l4 4-4 4"/>
             </svg>
           </div>
+          <p class="svc-card__kicker" data-i18n="services.ux.kicker">Experiencias digitales centradas en el usuario</p>
+          <h3 class="svc-card__title" data-i18n="services.ux.title">Experiencia Digital y UX</h3>
+          <p class="svc-card__desc" data-i18n="services.ux.desc">
+            Investigamos, diseñamos y optimizamos interfaces que convierten y escalan, alineadas a tu marca y objetivos de negocio.
+          </p>
+          <ul class="svc-card__list">
+            <li data-i18n="services.ux.b1">Investigación de usuarios y benchmarking</li>
+            <li data-i18n="services.ux.b2">Arquitectura de información y flujos</li>
+            <li data-i18n="services.ux.b3">Design systems y UI kits</li>
+            <li data-i18n="services.ux.b4">Prototipado y testing de usabilidad</li>
+            <li data-i18n="services.ux.b5">Optimización de conversión y accesibilidad</li>
+          </ul>
+          <a class="btn btn--sm svc-card__cta" href="#contacto" data-i18n="services.cta">Solicitar información</a>
+        </article>
+
+        <article class="svc-card svc-card--alt js-stagger" role="article">
+          <div class="svc-card__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+              <path d="M4 19V5"/>
+              <path d="M8 19V9"/>
+              <path d="M12 19V12"/>
+              <path d="M16 19V7"/>
+              <path d="M20 19V10"/>
+            </svg>
+          </div>
+          <p class="svc-card__kicker" data-i18n="services.data.kicker">Decisiones basadas en datos confiables</p>
+          <h3 class="svc-card__title" data-i18n="services.data.title">Analítica y Data Intelligence</h3>
+          <p class="svc-card__desc" data-i18n="services.data.desc">
+            Instrumentamos medición, integración y visualización para transformar datos en decisiones rápidas y accionables.
+          </p>
+          <ul class="svc-card__list">
+            <li data-i18n="services.data.b1">Tracking de eventos y embudos</li>
+            <li data-i18n="services.data.b2">Integración de fuentes y ETL</li>
+            <li data-i18n="services.data.b3">Dashboards ejecutivos y BI</li>
+            <li data-i18n="services.data.b4">Métricas y OKRs operativos</li>
+            <li data-i18n="services.data.b5">Alertas y monitoreo continuo</li>
+          </ul>
+          <a class="btn btn--sm svc-card__cta" href="#contacto" data-i18n="services.cta">Solicitar información</a>
+        </article>
+
+        <article class="svc-card js-stagger" role="article">
+          <div class="svc-card__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+              <path d="M12 3c3.314 0 6 2.239 6 5 0 1.636-.94 3.089-2.4 4.02-.53.338-.85.933-.85 1.56V15H9.25v-1.42c0-.63-.32-1.22-.85-1.56C6.94 11.09 6 9.636 6 8c0-2.761 2.686-5 6-5z"/>
+              <path d="M9 19h6M10.5 22h3"/>
+            </svg>
+          </div>
+          <p class="svc-card__kicker" data-i18n="services.ai.kicker">Inteligencia artificial aplicada a tu operación</p>
+          <h3 class="svc-card__title" data-i18n="services.ai.title">Integración de IA</h3>
+          <p class="svc-card__desc" data-i18n="services.ai.desc">
+            Implementamos modelos de IA que automatizan decisiones, analizan datos y maximizan la capacidad operativa de tu empresa con resultados medibles.
+          </p>
+          <ul class="svc-card__list">
+            <li data-i18n="services.ai.b1">Chatbots y asistentes inteligentes</li>
+            <li data-i18n="services.ai.b2">Análisis predictivo de datos</li>
+            <li data-i18n="services.ai.b3">Procesamiento de lenguaje natural (NLP)</li>
+            <li data-i18n="services.ai.b4">Automatización de documentos con IA</li>
+            <li data-i18n="services.ai.b5">Dashboards inteligentes con insights</li>
+          </ul>
+          <a class="btn btn--sm svc-card__cta" href="#contacto" data-i18n="services.cta">Solicitar información</a>
+        </article>
+
+        <article class="svc-card svc-card--alt js-stagger" role="article">
+          <div class="svc-card__icon" aria-hidden="true">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
+              <path d="M4 7h6M4 12h10M4 17h8"/>
+              <path d="M18 7l2 2-2 2"/>
+              <path d="M18 12l2 2-2 2"/>
+            </svg>
+          </div>
+          <p class="svc-card__kicker" data-i18n="services.auto.kicker">Eficiencia operativa sin tareas repetitivas</p>
           <h3 class="svc-card__title" data-i18n="services.auto.title">Automatización de Procesos</h3>
           <p class="svc-card__desc" data-i18n="services.auto.desc">
-            Eliminamos tareas repetitivas, reducimos errores y mejoramos la
-            eficiencia operativa de tu empresa con flujos automatizados.
+            Eliminamos tareas repetitivas, reducimos errores y mejoramos la eficiencia operativa de tu empresa con flujos de trabajo automatizados y conectados.
           </p>
-          <span class="svc-card__arrow" aria-hidden="true">→</span>
+          <ul class="svc-card__list">
+            <li data-i18n="services.auto.b1">Workflows automatizados end-to-end</li>
+            <li data-i18n="services.auto.b2">Integración de APIs y servicios</li>
+            <li data-i18n="services.auto.b3">Reducción de errores operativos</li>
+            <li data-i18n="services.auto.b4">Reportes y alertas automáticas</li>
+            <li data-i18n="services.auto.b5">Escalabilidad sin aumentar equipo</li>
+          </ul>
+          <a class="btn btn--sm svc-card__cta" href="#contacto" data-i18n="services.cta">Solicitar información</a>
         </article>
       </div>
     </div>
