--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
   <!-- Styles -->
-  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/main.css?v=20260225" />
 
   <!-- Favicon SVG -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><text y='26' font-size='28'>🔴</text></svg>" />
@@ -1066,6 +1066,6 @@
     </div>
   </footer>
 
-  <script src="js/main.js" type="module"></script>
+  <script src="js/main.js?v=20260225" type="module"></script>
 </body>
 </html>
