--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" data-theme="auto">
+<html lang="es" data-theme="auto" class="app-loading">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -54,8 +54,16 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
 
+  <!-- Loader failsafe: avoid blocking if main JS fails -->
+  <script>
+    window.setTimeout(function () {
+      document.documentElement.classList.add('app-ready');
+      document.documentElement.classList.remove('app-loading');
+    }, 4000);
+  </script>
+
   <!-- Styles -->
-  <link rel="stylesheet" href="css/main.css?v=20260225" />
+  <link rel="stylesheet" href="css/main.css?v=20260225-3" />
 
   <!-- Favicon SVG -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'><text y='26' font-size='28'>🔴</text></svg>" />
@@ -65,6 +73,14 @@
 
   <!-- Screen reader language announcer (accessibility T021) -->
   <span id="lang-announcer" aria-live="polite" aria-atomic="true" class="sr-only"></span>
+
+  <!-- Page loader overlay -->
+  <div class="page-loader" role="status" aria-live="polite" aria-label="Cargando" data-i18n-aria="loading.aria">
+    <div class="page-loader__inner">
+      <span class="page-loader__ring" aria-hidden="true"></span>
+      <span class="page-loader__text" data-i18n="loading.label">Cargando</span>
+    </div>
+  </div>
 
   <!-- Navigation -->
   <nav class="nav" role="navigation"
@@ -1066,6 +1082,6 @@
     </div>
   </footer>
 
-  <script src="js/main.js?v=20260225" type="module"></script>
+  <script src="js/main.js?v=20260225-3" type="module"></script>
 </body>
 </html>
