hotfix: static loader label

--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
   <span id="lang-announcer" aria-live="polite" aria-atomic="true" class="sr-only"></span>
 
   <!-- Page loader overlay -->
-  <div class="page-loader" role="status" aria-live="polite" aria-label="Cargando" data-i18n-aria="loading.aria">
+  <div class="page-loader" role="status" aria-live="polite" aria-label="Cargando">
     <div class="page-loader__inner">
       <span class="page-loader__ring" aria-hidden="true"></span>
-      <span class="page-loader__text" data-i18n="loading.label">Cargando</span>
+      <span class="page-loader__text">Cargando</span>
     </div>
   </div>
 
